[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/Journal/Document.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/Streetwear.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Journal/DocReader.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Journal/Documents.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=12]
size = 10
extra_spacing_space = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=13]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=6]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0.215686, 0.298039, 0.423529, 1 )
Button/fonts/font = SubResource( 12 )
Button/styles/disabled = SubResource( 13 )
Button/styles/focus = SubResource( 14 )
Button/styles/hover = SubResource( 15 )
Button/styles/normal = SubResource( 14 )
Button/styles/pressed = SubResource( 14 )
Label/colors/font_color = Color( 0, 0, 0, 1 )
Label/fonts/font = SubResource( 12 )

[sub_resource type="DynamicFont" id=1]
size = 12
extra_spacing_space = 1
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Theme" id=5]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0.215686, 0.298039, 0.423529, 1 )
Button/fonts/font = SubResource( 1 )
Button/styles/disabled = SubResource( 2 )
Button/styles/focus = SubResource( 3 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 3 )
Label/colors/font_color = Color( 0, 0, 0, 1 )
Label/fonts/font = SubResource( 1 )

[node name="Documents" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -384.0
margin_bottom = -273.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DocsContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="DocsContainer"]
margin_right = 40.0
margin_bottom = 11.0
size_flags_horizontal = 0
theme = SubResource( 6 )
text = "Return"

[node name="LabelDocs" type="Label" parent="DocsContainer"]
margin_top = 15.0
margin_right = 128.0
margin_bottom = 27.0
theme = SubResource( 5 )
text = "Documents"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="DocsContainer"]
margin_top = 31.0
margin_right = 128.0
margin_bottom = 175.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="DocsContainer/ScrollContainer"]
margin_right = 128.0
margin_bottom = 144.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Document" parent="DocsContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 128.0
margin_bottom = 18.0
docName = "E-Corp"
docText = "There have been rumors going around that E-Corp has been doing some strange experiments under it's downtown office."

[node name="DocReader" parent="." instance=ExtResource( 3 )]
visible = false
margin_right = 0.0
margin_bottom = 0.0

[connection signal="pressed" from="DocsContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="rtrn" from="DocReader" to="." method="_on_DocReader_rtrn"]
